--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,6 +3,12 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
+  <div><%= f.label :Firstname %><br />
+  <%= f.text_field :fname %></div>
+
+  <div><%= f.label :Lastname %><br />
+  <%= f.text_field :lname %></div>
+
   <div><%= f.label :email %><br />
   <%= f.email_field :email %></div>
 
