--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,1 +1,32 @@
-<h1>Welcome to you dashboard<h1>
+
+
+<div class="page-header">
+	<h1>Dashboard</h1>
+</div>
+	
+
+<div class="page-header">
+	
+</div>
+
+
+
+	<div class="status">
+		
+		<strong></strong>
+		
+		
+
+		<div class="meta">
+			
+		
+			
+			
+					<span class="admin">
+							
+					</span>	
+				
+			
+		</div>
+	</div>
+
