--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,24 +1,51 @@
-<!DOCTYPE html>
 <html>
 <head>
-  <title>Devise</title>
+  <title>Trackr</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<div id = "user_nav">
-		<% if user_signed_in? %>
-			Signed in as <%= current_user.email %>.Not you?
-			<%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
-		<% else %>
-			<%= link_to "Sign up", new_user_registration_path %> or <%= link_to "Sign in", new_user_session_path %>
-		<% end %>
+	<div class="navbar navbar-fixed-top">
+	  <div class="navbar-inner">
+	  	<div class="container">	
+		    <a class="brand" href="#">Trackr</a>
+		    <ul class="nav">
+		    	
+		    
+		   </ul>
+		   
+		    <ul class="nav pull-right">
+		    	<% if !user_signed_in? %>
+			     
+			       <li><%= link_to "Register", register_path %></li>
+			         <li><%= link_to "Log-in", login_path %></li>
+			         
+		      	<% end %>
+		    </ul>  
+		       
+		    <ul class="nav pull-right">
+		    	<% if user_signed_in? %>
+		    	<li><%= link_to current_user.email, profile_path %></li>
+		    	
+		    	 <li><%= link_to "Log-out", logout_path %></li>
+		    	<% end %>
+		    </ul>
+		    
+		 </div>   
+	  </div>
 	</div>
-<% flash.each do |name, msg| %>
-<%= content_tag :div, msg, :id =>"flash_#{name}" %>
-<% end %>
-<%= yield %>
-
-</body>
-</html>
+	
+	<div class="container">	
+		
+		
+		<% flash.each do |type, message| %>
+			 <div class="alert <%= flash_class type %>">
+		    	<button class="close" data-dismiss="alert" >x</button>
+		    	<%= message %>
+		    </div>
+		<% end %>
+		
+		<%= yield %>
+ 	</div>
+ 	
