Added fname, lname fields

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,6 +4,13 @@
   <%= devise_error_messages! %>
   
   
+
+  <div><%= f.label :Firstname %><br />
+  <%= f.text_field :fname %></div>
+
+  <div><%= f.label :Lastname %><br />
+  <%= f.text_field :lname %></div>
+  
   <div><%= f.label :email %><br />
   <%= f.email_field :email %></div>
 
