--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,3 @@
-<h1>Welcome to Main Page!<h1>
+<h1>Home#index</h1>
+<p>Find me in app/views/home/index.html.erb</p>
+<%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
