--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,18 +17,16 @@
 		   
 		    <ul class="nav pull-right">
 		    	<% if !user_signed_in? %>
-			     
-			       <li><%= link_to "Register", register_path %></li>
-			         <li><%= link_to "Log-in", login_path %></li>
 			         
 		      	<% end %>
 		    </ul>  
 		       
 		    <ul class="nav pull-right">
 		    	<% if user_signed_in? %>
-		    	<li><%= link_to current_user.email, profile_path %></li>
 		    	
-		    	 <li><%= link_to "Log-out", logout_path %></li>
+		    	<li><%= link_to current_user.email, destroy_user_session_path, :method => :delete %></li>
+		    	<li><%= image_tag current_user.pic.url(:thumb) %></li>
+		    	 <li><%= link_to "Log out", destroy_user_session_path, :method => :delete %></li>
 		    	<% end %>
 		    </ul>
 		    
