--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 		    <ul class="nav pull-right">
 		    	<% if user_signed_in? %>
 		    	
-		    	<li><%= link_to current_user.email, destroy_user_session_path, :method => :delete %></li>
+		    	<li><%= link_to current_user.email, edit_user_registration_path, :method => :get %></li>
 		    	<li><%= image_tag current_user.pic.url(:thumb) %></li>
 		    	 <li><%= link_to "Log out", destroy_user_session_path, :method => :delete %></li>
 		    	<% end %>
