--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -23,14 +23,15 @@
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
-  <div class="field">
-    <%= f.label :user_id %><br />
-    <%= f.number_field :user_id %>
-  </div>
+  	
+  <% @categories.each do |cat|%>	
+  	 
   <div class="field">
     <%= f.label :category_id %><br />
-    <%= f.number_field :category_id %>
+    <%= f.select :category_id, ['ad','adf']%>
   </div>
+  
+  <% end %>
   <div class="field">
     <%= f.label :status_id %><br />
     <%= f.number_field :status_id %>
