--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,57 @@
 <h1>Editing post</h1>
 
-<%= render 'form' %>
+<%= form_for(@post) do |f| %>
+  <% if @post.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
+
+      <ul>
+      <% @post.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <%= f.label :namekey %><br />
+    <%= f.text_field :namekey %>
+  </div>
+  <div class="field">
+    <%= f.label :title %><br />
+    <%= f.text_field :title %>
+  </div>
+  <div class="field">
+    <%= f.label :description %><br />
+    <%= f.text_area :description %>
+  </div>
+  	
+  <% @cat=Array.new 
+  	@categories.each do |cat|
+  	@cat<<[cat.title,cat.id]
+  	 end 
+  	 %>	
+  	 
+  <div class="field">
+    <%= f.label :category_id %><br />
+    <%= f.select :category_id, @cat %>
+  </div>
+  
+  <% @stat=Array.new 
+  	@statuses.each do |stat|
+  	@stat<<[stat.title,stat.id]
+  	 end 
+  	 %>	
+
+  <div class="field">
+    <%= f.label :status_id %><br />
+    <%= f.select :status_id, @stat %>
+  </div>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
+
 
 <%= link_to 'Show', @post %> |
 <%= link_to 'Back', posts_path %>
