--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,8 +19,8 @@
     <td><%= post.title %></td>
     <td><%= post.description %></td>
     <td><%= post.user_id %></td>
-    <td><%= post.category_id %></td>
-    <td><%= post.status_id %></td>
+    <td><%= post.category.title %></td>
+    <td><%= post.status.title %></td>
     <td><%= link_to 'Show', post %></td>
     <td><%= link_to 'Edit', edit_post_path(post) %></td>
     <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
