--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -1,3 +1,56 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.status {
+  border-bottom: 1px solid #ccc;
+  padding: 8px 0;
+  background-color: #fff;
+  padding-left: 30px;
+  float: left;
+}
+.status p {
+  margin: 4px 0;
+  
+  
+}
+.status .admin {
+  display:none;
+  color: #000;
+}
+
+.status.hover .admin {
+    display: inline;
+  
+}
+.status-inner{
+  background-color: #ffbe69;
+  padding: 10px;
+  margin-right: 30px;
+  float: left;
+  
+}
+.comment{
+  font-size: 12;
+  
+}
+
+.status-inner-comment{
+  background-color: #8ac8fd;
+  padding: 10px;
+  margin-right: 30px;
+}
+.title{
+  font-size: 20px;
+}
+
+.status-inner1{
+ // border: 1px solid #000;
+  float:left;
+  width:290px;
+}
+.status-inner2{
+  //border: 1px solid #000;
+  float:left;
+  width: 550px;
+  height: auto;
+}
