--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,33 +6,40 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<div class="navbar navbar-fixed-top">
-	  <div class="navbar-inner">
-	  	<div class="container">	
-		    <a class="brand" href="#">Trackr</a>
-		    <ul class="nav">
-		    	
-		    
-		   </ul>
-		   
-		    <ul class="nav pull-right">
-		    	<% if !user_signed_in? %>
-			         
-		      	<% end %>
-		    </ul>  
+
+	<div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="#">Trackr</a>
+          <div class="nav-collapse collapse">
+          	
+          	<% if user_signed_in? %>
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+             <li><%= link_to "Dashboard", posts_path %></li>
+            	<li><%= link_to "Category", categories_path %></li>
+              <li><%= link_to "Status", statuses_path %></li>
+            </ul>
+		    <% end %>  
 		       
 		    <ul class="nav pull-right">
 		    	<% if user_signed_in? %>
 		    	
-		    	<li><%= link_to current_user.email, edit_user_registration_path, :method => :get %></li>
+		    	<li><%= link_to current_user.full_name, edit_user_registration_path, :method => :get %></li>
 		    	<li><%= image_tag current_user.pic.url(:thumb) %></li>
 		    	 <li><%= link_to "Log out", destroy_user_session_path, :method => :delete %></li>
 		    	<% end %>
 		    </ul>
-		    
-		 </div>   
-	  </div>
-	</div>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+	
 	
 	<div class="container">	
 		
@@ -46,4 +53,5 @@
 		
 		<%= yield %>
  	</div>
- 	
+ 	</body>
+</html> 	
