--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -8,6 +8,13 @@
   padding-left: 30px;
   float: left;
 }
+.status1 {
+  border-bottom: 1px solid #ccc;
+  padding: 8px 0;
+  background-color: #fff;
+  padding-left: 30px;
+  //float: left;
+}
 .status p {
   margin: 4px 0;
   
@@ -29,6 +36,7 @@
   float: left;
   
 }
+
 .comment{
   font-size: 12;
   
