--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.comment-inner{
+  border: 1px solid #000;
+float: left;
+}
+.comment-1{
+  //border: 1px solid #000;
+  width: 200px;
+  float: left;
+}
