--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -13,7 +13,8 @@
   padding: 8px 0;
   background-color: #fff;
   padding-left: 30px;
-  //float: left;
+  float: left;
+  width: 100%;
 }
 .status p {
   margin: 4px 0;
@@ -34,7 +35,7 @@
   padding: 10px;
   margin-right: 30px;
   float: left;
-  
+  //width: 100%;
 }
 
 .comment{
@@ -46,6 +47,8 @@
   background-color: #8ac8fd;
   padding: 10px;
   margin-right: 30px;
+  float: left;
+  width: 95%;
 }
 .title{
   font-size: 20px;
