--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -32,17 +32,11 @@
   </div>
   
    <div class="field">
-  	<%= f.label "Assigned Users"%>
-  	
-  	<% @usr=Array.new 
-	  	@all_users.each do |usr|
-	  	@usr<<[usr.fname,usr.id]
-  	 end 
-  	 %>
-  	 
-  	<%= f.select(:user_id, @usr, 
-{ :selected => @usr },{ :multiple => true}) %>
-
+   	
+   	<%= fields_for(@assignments) do |ass|%>
+		<%= ass.label "Assigned Users"%>
+		<%= collection_select( :users, :id, @all_users, :id, :full_name, {}, {:multiple => :true})%>
+	<% end %>
   </div>
   
  
