--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,6 +30,22 @@
 		           <p><% post.namekey %></p>
 		          <p> Status: <%= post.status.title %></p>
 		           <p> Category: <%= post.category.title %></p>
+		           <p>Members:<br/>
+						 <%	user_array = Array.new %>
+						 	<% @assignment_record.each do |ar| %>
+						 		<% if ar.post_id == post.id%>
+						 			<% user_array<<ar.user_id %>
+						 		<% end %>	
+						 	<% end %>
+		 				 
+						 	<% @user_record.each do |ur| %>
+			    				<% user_array.each do |ua| %>
+			    					<% if ur.id == ua %>
+			    						<%= image_tag("/system/pics/#{ur.id}/thumb/#{ur.pic_file_name}", :alt => "") %><%=  ur.full_name%><br />
+			    				<%	end %>
+			    				<% end %>
+			    			<% end %>
+	    			</p>
 		           <%= image_tag post.user.pic.url(:thumb) %><b> <%= post.user.full_name %></b> <br />
 		          <p><%= post.description %><br /></p>
 		         
