--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,23 @@
   <h3>Title:</3>
   <%=h @post.title %>
 </p>
-
+<p class="lead">
+<b>Assigned Users:</b>
+				 <%	user_array = Array.new %>
+				 	<% @assignment_record.each do |ar| %>
+				 		<% if ar.post_id == @post.id%>
+				 			<% user_array<<ar.user_id %>
+				 		<% end %>	
+				 	<% end %>
+ 				 	
+				 	<% @user_record.each do |ur| %>
+	    				<% user_array.each do |ua| %>
+	    					<% if ur.id == ua %>
+	    						<%= image_tag("/system/pics/#{ur.id}/thumb/#{ur.pic_file_name}", :alt => "") %><%=  ur.full_name%>&nbsp;
+	    				<%	end %>
+	    				<% end %>
+	    			<% end %>
+</p>	    			
 <p class="lead">
  Description: "<%=h @post.description %>" <br /><br />
 Author:  <%= image_tag @post.user.pic.url(:thumb) %><b> <%= @post.user.full_name %></b> <br />
