--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -87,6 +87,15 @@ body {
   background-color: #88c8fe;
 
 }
+.span4-b {
+  width: 250px;
+  height: 230px;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 10px solid #a7a7a7;
+  overflow: auto;
+  background-color: #ffae73;
+}
 .btn btn-primary btn-large{
 	color: #ffff;
 	
