--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -10,3 +10,15 @@ float: left;
   width: 200px;
   float: left;
 }
+.user-cont{
+  float: left;
+  min-width: 140px;
+  //border: 1px solid #000;
+}
+
+.message-cont{
+  float: left;
+  width: 660px;
+  //border: 1px solid #000;
+  padding: 10px;
+}
