--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,23 +1,33 @@
-<h1>Listing categories</h1>
+<% if user_signed_in?%>
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @categories.each do |category| %>
-  <tr>
-    <td><%= category.title %></td>
-    <td><%= link_to 'Show', category %></td>
-    <td><%= link_to 'Edit', edit_category_path(category) %></td>
-    <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+	<% if current_user.fname == "admin"%>
+		<h1>Listing categories</h1>
+		
+		<table>
+		  <tr>
+		    <th>Title</th>
+		    <th></th>
+		    <th></th>
+		    <th></th>
+		  </tr>
+		
+		<% @categories.each do |category| %>
+		  <tr>
+		    <td><%= category.title %></td>
+		    <td><%= link_to 'Show', category %></td>
+		    <td><%= link_to 'Edit', edit_category_path(category) %></td>
+		    <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+		  </tr>
+		<% end %>
+		</table>
+		
+		<br />
+		
+		<%= link_to 'New Category', new_category_path %>
+	<% else %>
+		
+		<h1>You are not an Admin!</h1>	
+		
+	<% end %>
+		
 <% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Category', new_category_path %>
