--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -31,6 +31,17 @@
     <%= f.select :category_id, @cat %>
   </div>
   
+   <% @stat=Array.new 
+  	@statuses.each do |stat|
+  	@stat<<[stat.title,stat.id]
+  	 end 
+  	 %>	
+
+  <div class="field">
+    <%= f.label :status_id %><br />
+    <%= f.select :status_id, @stat %>
+  </div>
+  
    <div class="field">
    	
    	<%= fields_for(@assignments) do |ass|%>
