--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,10 +22,10 @@
           	
           	<% if user_signed_in? %>
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-             <li><%= link_to "Dashboard", posts_path %></li>
-            	<li><%= link_to "Category", categories_path %></li>
-              <li><%= link_to "Status", statuses_path %></li>
+	            <li><a href="#">Home</a></li>
+	            <li><%= link_to "Dashboard", posts_path %></li>
+	            <li><%= link_to "Category", categories_path %></li>
+	            <li><%= link_to "Status", statuses_path, class:"active" %></li>
             </ul>
 		    <% end %>  
 		       
