--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
           	
           	<% if user_signed_in? %>
             <ul class="nav">
-	            <li><a href="#">Home</a></li>
+	            <li><%= link_to "Home", root_path %></li>
 	            <li><%= link_to "Dashboard", posts_path %></li>
 	            <li><%= link_to "Category", categories_path %></li>
 	            <li><%= link_to "Status", statuses_path, class:"active" %></li>
