--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,18 +1,18 @@
 
  <div class="container">
  	
+ 	
+ 	
 	<div class="hero-unit">
 	        <h1>Dashboard</h1>
 	        <p>Where you can see all the tickets.</p>
 	        <% if user_signed_in? %>
-					<%= link_to "Create ticket", new_post_path, class:"btn btn-primary btn-large" %>
+					<%= link_to "Create ticket", new_post_path, class:"btn btn-inverse btn-large" %>
 				<% else %>
 				<div class="page-header">
 					<h1>Register now to create a ticket!</h1>
 				</div>
 			<% end %>
-			
-			
 	</div> 
 
 
@@ -26,12 +26,18 @@
 		       	 	<div class="span4-b">	
 		       <% end %>	
 		        	
-		        	
-		         <p class="lead"><span class="ticket-title"><%= post.title %></span></p>
-		          <%= time_ago_in_words(post.created_at) + " ago" %><br />
+		        	<% if post.status.title == "OPEN" %>
+		         		<%= image_tag ("/icons/open.png") %> <span class="label label-success"><%= post.status.title%></span>
+		         	<% elsif post.status.title == "CLOSED" %>
+		         		<%= image_tag ("/icons/closed.png") %> <span class="label label-important"><%= post.status.title%></span>
+		         	<% end %>
+		         		
+		         <p class="lead"><span class="ticket-title"><%= post.title.upcase %></span></p>
+		         
+				 <i> <%= time_ago_in_words(post.created_at) %> ago <br /></i>
 		      
 		        <% if post.category.title == "FEATURES" %>
-		        	<%= link_to "OPEN»", post_path(post), class:"btn btn-info" %>
+		        	<%= link_to "OPEN »", post_path(post), class:"btn btn-info" %>
 		       <% else %>
 		       	 	<%= link_to "OPEN »", post_path(post), class:"btn btn-warning" %>
 		        <% end %>
@@ -40,7 +46,7 @@
 		        <a href=<%= "#myModal"+post.title %> role="button" class="btn" data-toggle="modal">DETAILS »</a>	
 		        	
 		           <p><% "myModal"+post.namekey %></p>
-		         
+		         	
 		           
 		           <%= image_tag post.user.pic.url(:thumb) %><b> By: <%= post.user.full_name %></b> <br />
 		          <p class="ticket-text"><%= post.description %><br /></p>
@@ -51,8 +57,10 @@
 						    <h3 id="myModalLabel">Details: </h3>
 						</div>
 						  <div class="modal-body">
-						    	<p> <b>Status: </b><%= post.status.title %></p>
-		           				<p><b>Category: </b><%= post.category.title %></p>
+						  	
+						
+						    	<span class="label label-success"><b>Status: </b><%= post.status.title %></span>
+		           				<span class="label label-important"><b>Category: </b><%= post.category.title %></span>
 						    	<p><b>Members: </b></p>
 								 <%	user_array = Array.new %>
 								 	<% @assignment_record.each do |ar| %>
@@ -69,21 +77,22 @@
 					    				<% end %>
 					    			<% end %>
 						  </div>
+							 <div class="meta">
+								<span class="admin">
+										<center>| <%= link_to "Show", post_path(post) %> |
+										<%= link_to "Edit", edit_post_path(post) %> |
+										<%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure you want to delete this status?"}%> |</center>
+								</span>				
+							</div>
 						  <div class="modal-footer">
 						</div>
 					</div>	
 		        
-		         
-			       <div class="meta">
-								
-										<span class="admin">
-												| <%= link_to "Show", post_path(post) %> |
-												<%= link_to "Edit", edit_post_path(post) %> |
-												<%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure you want to delete this status?"}%> |
-										</span>		
-					</div>
-	       
+		          
+			       
+					
        			 </div>
+       			 
        		<% end %>	 
 		</div>
 
