--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,90 +17,83 @@
 
 
 
-		<div class="row">
-			<% @posts.each do |post| %>
-		       
-		       <% if post.category.title == "FEATURES" %>
+	<div class="row">
+		<% @posts.each do |post| %>
+		    <% if post.category.title == "FEATURES" %>
 		        	<div class="span4-a">
-		       <% else %>
+		    <% else %>
 		       	 	<div class="span4-b">	
-		       <% end %>	
-		        	
-		        	<% if post.status.title == "OPEN" %>
-		         		<%= image_tag ("/icons/open.png") %> <span class="label label-success"><%= post.status.title%></span>
-		         	<% elsif post.status.title == "CLOSED" %>
-		         		<%= image_tag ("/icons/closed.png") %> <span class="label label-important"><%= post.status.title%></span>
-		         	<% end %>
-		         		
-		         <p class="lead"><span class="ticket-title"><%= post.title.upcase %></span></p>
-		         
-				 <i> <%= time_ago_in_words(post.created_at) %> ago <br /></i>
-		      
-		        <% if post.category.title == "FEATURES" %>
-		        	<%= link_to "OPEN »", post_path(post), class:"btn btn-info" %>
-		       <% else %>
-		       	 	<%= link_to "OPEN »", post_path(post), class:"btn btn-warning" %>
-		        <% end %>
-		        
-		        
-		        <a href=<%= "#myModal"+post.title %> role="button" class="btn" data-toggle="modal">DETAILS »</a>	
-		        	
-		           <p><% "myModal"+post.namekey %></p>
-		         	
-		           
-		           <%= image_tag post.user.pic.url(:thumb) %><b> By: <%= post.user.full_name %></b> <br />
-		          <p class="ticket-text"><%= post.description %><br /></p>
-		         
-		         <div id=<%= "myModal"+post.title %> class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-					  <div class="modal-header">
-						    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-						    <h3 id="myModalLabel">Details: </h3>
-						</div>
-						  <div class="modal-body">
-						  	
-						
-						    	<span class="label label-success"><b>Status: </b><%= post.status.title %></span>
-		           				<span class="label label-important"><b>Category: </b><%= post.category.title %></span>
-						    	<p><b>Members: </b></p>
-								 <%	user_array = Array.new %>
-								 	<% @assignment_record.each do |ar| %>
-								 		<% if ar.post_id == post.id%>
-								 			<% user_array<<ar.user_id %>
-								 		<% end %>	
-								 	<% end %>
-				 				 
-								 	<% @user_record.each do |ur| %>
-					    				<% user_array.each do |ua| %>
-					    					<% if ur.id == ua %>
-					    						<%= image_tag("/system/pics/#{ur.id}/thumb/#{ur.pic_file_name}", :alt => "") %> <%=  ur.full_name%>
-					    				<%	end %>
-					    				<% end %>
-					    			<% end %>
-						  </div>
-							 <div class="meta">
-								<span class="admin">
-										<center>| <%= link_to "Show", post_path(post) %> |
-										<%= link_to "Edit", edit_post_path(post) %> |
-										<%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure you want to delete this status?"}%> |</center>
-								</span>				
-							</div>
-						  <div class="modal-footer">
-						</div>
-					</div>	
-		        
-		          
-			       
+		    <% end %>	
+				        	
+	        <% if post.status.title == "OPEN" %>
+	         		<%= image_tag ("/icons/open.png") %> <span class="label label-success"><%= post.status.title%></span>
+	        <% elsif post.status.title == "CLOSED" %>
+	         		<%= image_tag ("/icons/closed.png") %> <span class="label label-important"><%= post.status.title%></span>
+	        <% end %>
+				         		
+		    <p class="lead"><span class="ticket-title"><%= post.title.upcase %></span></p>
+				         
+			<i> <%= time_ago_in_words(post.created_at) %> ago <br /></i>
+				      
+		    <% if post.category.title == "FEATURES" %>
+				<%= link_to "OPEN »", post_path(post), class:"btn btn-info" %>
+			<% else %>
+				<%= link_to "OPEN »", post_path(post), class:"btn btn-warning" %>
+			<% end %>
+				        
+			<a href=<%= "#myModal"+post.title %> role="button" class="btn" data-toggle="modal">DETAILS »</a>	
+				        	
+		 	<p><% "myModal"+post.namekey %></p>
+				         	
+			<%= image_tag post.user.pic.url(:thumb) %><b> By: <%= post.user.full_name %></b> <br />
+			<p class="ticket-text"><%= post.description %><br /></p>
+				         
+	         <div id=<%= "myModal"+post.title %> class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				  <div class="modal-header">
+					    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+					    <h3 id="myModalLabel">Details: </h3>
+					</div>
+					  	<div class="modal-body">
+					  	
 					
-       			 </div>
-       			 
-       		<% end %>	 
-		</div>
-
-<br />
+					    	<span class="label label-success"><b>Status: </b><%= post.status.title %></span>
+	           				<span class="label label-important"><b>Category: </b><%= post.category.title %></span>
+					    	<p><b>Members: </b></p>
+							 <%	user_array = Array.new %>
+							 	<% @assignment_record.each do |ar| %>
+							 		<% if ar.post_id == post.id%>
+							 			<% user_array<<ar.user_id %>
+							 		<% end %>	
+							 	<% end %>
+			 				 
+							 	<% @user_record.each do |ur| %>
+				    				<% user_array.each do |ua| %>
+				    					<% if ur.id == ua %>
+				    						<div class="modal-user-con"><%= image_tag("/system/pics/#{ur.id}/thumb/#{ur.pic_file_name}", :alt => "") %> <%= ur.full_name%></div>
+				    				<%	end %>
+				    				<% end %>
+				    			<% end %>
+					  	</div>
+					 	<div class="meta">
+						<span class="admin">
+								<center>| <%= link_to "Show", post_path(post) %> |
+								<%= link_to "Edit", edit_post_path(post) %> |
+								<%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure you want to delete this status?"}%> |</center>
+						</span>				
+						</div>
+					<div class="modal-footer">
+					</div>
+				</div>	
+				        
+				          
+					       
+							
+		       			 </div>
+		       			 
+		       		<% end %>	 
+				</div>
 
 </div>
-
-
 
  
 
