Add Design, Change Sort option

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -5863,6 +5863,20 @@ a.badge:hover {
      -moz-border-radius: 6px;
           border-radius: 6px;
 }
+.hero-unit-1 {
+  padding: 60px;
+ 
+  margin-bottom: 30px;
+  font-size: 18px;
+  font-weight: 200;
+  line-height: 30px;
+  color: inherit;
+  background-image: url('/layout/hero1.jpg');
+  background-repeat: no-repeat;
+  -webkit-border-radius: 6px;
+     -moz-border-radius: 6px;
+          border-radius: 6px;
+}
 
 .hero-unit h1 {
   margin-bottom: 0;
@@ -5872,10 +5886,19 @@ a.badge:hover {
   color: inherit;
 }
 
+.hero-unit-1 h1 {
+  margin-bottom: 0;
+  font-size: 60px;
+  line-height: 1;
+  letter-spacing: -1px;
+  color: inherit;
+}
 .hero-unit li {
   line-height: 30px;
 }
-
+.hero-unit-1 li {
+  line-height: 30px;
+}
 .pull-right {
   float: right;
 }
