--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -65,3 +65,17 @@
   width: 550px;
   height: auto;
 }
+
+  
+  
+  nav ul ul {
+  display: none;
+}
+
+  nav ul li:hover > ul {
+    display: block;
+  }
+
+    
+    
+    
