create ticket pop up form

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
 	        <p>Where you can see all the tickets.</p>
 	       
 	        <% if user_signed_in? %>
-	        	<%= link_to "Create ticket", new_post_path, class:"btn btn-inverse btn-large" %><br /><br />
+	        	<%= link_to "Create ticket", new_post_path, class:"btn btn-inverse btn-large",rel:"facebox" %><br /><br />
 	        	
 				  <div class="btn-group">
 				    
