--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -42,6 +42,6 @@
   
  
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Submit",:class => "btn btn-inverse" %>
   </div>
 <% end %>
