--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
 	        <p>Where you can see all the tickets.</p>
 	       
 	        <% if user_signed_in? %>
-	        	<%= link_to "Create ticket", new_post_path, class:"btn btn-inverse btn-large",rel:"facebox" %><br /><br />
+	        	<%= link_to "Create ticket", new_post_path, class:"btn btn-inverse btn-large" %><br /><br />
 	        	
 				  <div class="btn-group">
 				    
@@ -56,10 +56,11 @@
 
 	<div class="row">
 		<% @posts.each do |post| %>
+			<div class="span4-cont">
 		    <% if post.category.title == "FEATURES" %>
-		        	<div class="span4-a">
+		        	<div class="postcont4-a">
 		    <% else %>
-		       	 	<div class="span4-b">	
+		       	 	<div class="postcont4-b">	
 		    <% end %>	
 				        	
 	        <% if post.status.title == "OPEN" %>
@@ -84,7 +85,7 @@
 				         	
 			<%= image_tag post.user.pic.url(:thumb) %><b> By: <%= post.user.full_name %></b> <br />
 			<p class="ticket-text"><%= post.description %><br /></p>
-				         
+	</div>	         
 	         <div id=<%= "myModal"+post.title %> class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 				  <div class="modal-header">
 					    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
@@ -113,9 +114,11 @@
 					  	</div>
 					 	<div class="meta">
 						<span class="admin">
+							<% if post.user_id == current_user.id%>
 								<center>| <%= link_to "Show", post_path(post) %> |
 								<%= link_to "Edit", edit_post_path(post) %> |
 								<%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure you want to delete this status?"}%> |</center>
+							<% end %>
 						</span>				
 						</div>
 					<div class="modal-footer">
@@ -129,6 +132,7 @@
 		       			 
 		       		<% end %>	 
 				</div>
+				
 
 </div>
 
