--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -61,7 +61,7 @@
  
   
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Submit",:class => "btn btn-inverse" %>
   </div>
 <% end %>
 
