--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,9 +19,9 @@
   <%= f.password_field :password_confirmation %></div>
   
   <div><%= f.label :Profile_picture %>
-  	<%= f.file_field :pic %></div>
+  	<%= f.file_field :pic, :value => '/user.png' %></div>
 
-  <div><%= f.submit "Sign up" %></div>
+  <div> <%= f.submit "Sign up",:class => "btn btn-inverse" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
