--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -57,18 +57,10 @@
 	<div class="row">
 		<% @posts.each do |post| %>
 			<div class="span4-cont">
-		    <% if post.category.title == "FEATURES" %>
-		        	<div class="postcont4-a">
-		    <% else %>
-		       	 	<div class="postcont4-b">	
-		    <% end %>	
-				        	
-	        <% if post.status.title == "OPEN" %>
-	         		<%= image_tag ("/icons/open.png") %> <span class="label label-success"><%= post.status.title%></span>
-	        <% elsif post.status.title == "CLOSED" %>
-	         		<%= image_tag ("/icons/closed.png") %> <span class="label label-important"><%= post.status.title%></span>
-	        <% end %>
-				         		
+		    <div class="postcont4-a">	
+		    	
+			<span class="label label-success"><%= post.status.title%></span>
+	       	
 		    <p class="lead"><span class="ticket-title"><%= post.title.upcase %></span></p>
 				         
 			<i> <%= time_ago_in_words(post.created_at) %> ago <br /></i>
@@ -113,12 +105,10 @@
 				    			<% end %>
 					  	</div>
 					 	<div class="meta">
-						<span class="admin">
-							<% if post.user_id == current_user.id%>
-								<center>| <%= link_to "Show", post_path(post) %> |
+						<span class="admin"><center>| <%= link_to "Show", post_path(post) %> |
 								<%= link_to "Edit", edit_post_path(post) %> |
 								<%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure you want to delete this status?"}%> |</center>
-							<% end %>
+							
 						</span>				
 						</div>
 					<div class="modal-footer">
